# LibSqlite3

libs/win32/vs2015/Debug/: sqlite3Static.lib
libs/win32/vs2015/Release/: sqlite3Static.lib
libs/win32/vs2017/Debug/: sqlite3Static.lib
libs/win32/vs2017/Release/: sqlite3Static.lib
libs/win64/vs2015/Debug/: sqlite3Static.lib
libs/win64/vs2015/Release/: sqlite3Static.lib
libs/win64/vs2017/Debug/: sqlite3Static.lib
libs/win64/vs2017/Release/: sqlite3Static.lib
project_generator/: build_all.sh  project_env_setup.sh
project_generator/android/all/: build.sh  check.sh
project_generator/android/arm64-v8a/: build_release.sh  debug.xml  release.xml
project_generator/android/armv7-a/: debug.xml  release.xml
project_generator/android/x86/: debug.xml  release.xml
project_generator/android/x86_64/: debug.xml  release.xml
project_generator/apple/ios/all/: build.sh
project_generator/apple/ios/iphoneos/: debug.xml  release.xml
project_generator/apple/ios/iphonesimulator/: build_release.sh  debug.xml  release.xml
project_generator/apple/macosx/: build_debug.sh  debug.xml  release.xml
project_generator/windows/all/: build.sh
project_generator/windows/win32/vs2015/: build_debug.sh  debug.xml  release.xml
project_generator/windows/win32/vs2017/: build_all.sh  build_release.sh  debug.xml  release.xml
project_generator/windows/win64/vs2015/: build_debug.sh  debug.xml  release.xml
project_generator/windows/win64/vs2017/: build_all.sh  debug.xml  release.xml
sqlite3/: CMakeLists.txt
ue4/: sqlite3Static.Build.cs
